--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "install": "npm run install:server",
+    "install:server": "(cd ./server && npm install)",
+    "postinstall":"npm run build",
+    "start": "npm run start:prod",
+    "start:prod": "(cd ./server && ./node_modules/.bin/ts-node ./src/main.ts)",
+    "start:dev": "npm run start:server",
+    "start:server": "(cd ./server && npm run start:watch)"
   },
   "author": "Oleg Ivinskiy <skitlz637@mail.ru>",
   "license": "ISC"
