--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "install": "npm run install:server",
     "install:server": "(cd ./server && npm install)",
     "start": "npm run start:prod",
-    "start:prod": "(cd ./server && ./node_modules/.bin/ts-node ./src/main.ts)"
+    "start:prod": "(cd ./server && ./node_modules/.bin/ts-node ./src/main.ts)",
+    "start:dev": "npm run start:server",
+    "start:server": "(cd ./server && npm run start)"
   },
   "author": "Oleg Ivinskiy <skitlz637@mail.ru>",
   "license": "ISC"
