--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "install": "npm run install:client && npm run install:server",
     "install:client": "(cd ./client && npm install)",
     "install:server": "(cd ./server && npm install)",
-    "postinstall":"npm run build",
+    "postinstall": "npm run build",
     "build": "npm run build:client",
     "build:client": "(cd ./client && npm run build)",
     "start": "npm run start:prod",
     "start:prod": "(cd ./server && npm run start)",
     "start:dev": "npm run start:server",
-    "start:server": "(cd ./server && npm run start:dev)"
+    "start:server": "(cd ./server && npm run start:dev)",
+    "dev": "concurrently \"npm run start --prefix client\" \"npm run start:dev\""
   },
   "author": "Oleg Ivinskiy <skitlz637@mail.ru>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^5.1.0"
+  }
 }
