--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/platform-express": "^7.0.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
